--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.30.1",
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.5",
+    "openai": "^5.16.0",
     "randomstring": "^1.3.1",
     "sequelize": "^6.37.7"
   },
