--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "run": "nodemon app.js",
     "dev": "nodemon app.js",
     "eslint": "npx eslint .",
     "prepare": "husky install",
